--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ seleniumVersion = 3.141.59
 groovyVersion = 2.5.5
 gradleVersion = 4.9
 
+testngVersion = 6.13.1
 junitVersion = 4.12
 hamcrestVersion = 1.3
 springVersion = 5.1.2.RELEASE
